--- a/configuangpintk.json
+++ b/configuangpintk.json
@@ -3,8 +3,8 @@
     {
       "status": 1,
       "redirect_url": "",
-      "privacy_policy_url": "https://sites.google.com/view/lunomosikvid",
-	  "email_feedback_and_report": "lynoku.square7@gmail.com",
+      "privacy_policy_url": "https://docs.google.com/document/d/1AG-bwlCmPIm-0BUosOsmLT4bk4KOfHmb468SRjRRAMk/edit?usp=sharing",
+	  "email_feedback_and_report": "ralynn.gerd47@gmail.com",
       "webview_cache": true,
       "post_list_in_large_style": false,
       "show_post_list_header": true,
@@ -33,9 +33,9 @@
       "ad_manager_interstitial_unit_id": "/6499/example/interstitial",
       "ad_manager_native_unit_id": "/6499/example/native",
       "ad_manager_app_open_unit_id": "/6499/example/app-open",
-      "fan_banner_unit_id": "IMG_16_9_APP_INSTALL#342215684913660_342216364913592",
-      "fan_interstitial_unit_id": "IMG_16_9_APP_INSTALL#342215684913660_342216414913587",
-      "fan_native_unit_id": "IMG_16_9_APP_INSTALL#342215684913660_342216511580244",
+      "fan_banner_unit_id": "843711393272114_1125014151808502",
+      "fan_interstitial_unit_id": "843711393272114_1125014241808493",
+      "fan_native_unit_id": "",
       "startapp_app_id": "0",
       "unity_game_id": "157b73ce1",
       "unity_banner_placement_id": "banner",
