--- a/configuangpintk.json
+++ b/configuangpintk.json
@@ -35,7 +35,7 @@
       "ad_manager_app_open_unit_id": "/6499/example/app-open",
       "fan_banner_unit_id": "843711393272114_1125014151808502",
       "fan_interstitial_unit_id": "843711393272114_1125014241808493",
-      "fan_native_unit_id": "",
+      "fan_native_unit_id": "843711393272114_1125406371769280",
       "startapp_app_id": "0",
       "unity_game_id": "157b73ce1",
       "unity_banner_placement_id": "banner",
@@ -49,7 +49,7 @@
       "ironsource_app_key": "1a6912d95",
       "ironsource_banner_id": "DefaultBanner",
       "ironsource_interstitial_id": "DefaultInterstitial",
-      "interstitial_ad_interval": 2,
+      "interstitial_ad_interval": 4,
       "native_ad_index": 1,
       "native_ad_interval": 5,
       "native_ad_style": "medium",
