--- a/configuangpintk.json
+++ b/configuangpintk.json
@@ -97,51 +97,51 @@
     },{
       "id": 4,
       "category": "Tips Pinjaman Online Uang Pintek",
-      "title": "Cara Menghitung Bunga Pinjaman dan Cicilan di Aplikasi Uang Pintek Pinjaman Online",
+      "title": "Pinjaman Online 4 Juta",
       "image": "https://firebasestorage.googleapis.com/v0/b/tips-8fb99.appspot.com/o/uangpintk%2Fbannerpntk.png?alt=media&token=454bff31-efb0-478f-af7e-0342f10a08b0",
-      "content": "https://firebasestorage.googleapis.com/v0/b/tips-8fb99.appspot.com/o/uangpintk%2F4%20Cara%20Menghitung%20Bunga%20Pinjaman%20dan%20Cicilan%20di%20Aplikasi%20Uang%20Pintek%20Pinjaman%20Online.html?alt=media&token=c4188d4e-008a-40fe-bab8-c8d994039d14",
+      "content": "https://firebasestorage.googleapis.com/v0/b/tips-8fb99.appspot.com/o/uangpintk%2F4%20Pinjaman%20Online%204%20Juta.html?alt=media&token=89f09500-0b24-47fc-b8f4-0f964a519a1a&_gl=1*1i41hi8*_ga*MTAwMzcyMjI1NS4xNjYxNDA5Njcz*_ga_CW55HF8NVT*MTY5NjgzNDM5OS4zMC4xLjE2OTY4MzUxNTQuNTMuMC4w",
       "video": ""
     },{
       "id": 5,
       "category": "Tips Pinjaman Online Uang Pintek",
-      "title": "Cara Menghubungi Admin Aplikasi Uang Pintek",
+      "title": "Pinjaman Online Harian",
       "image": "https://firebasestorage.googleapis.com/v0/b/tips-8fb99.appspot.com/o/uangpintk%2Fbannerpntk.png?alt=media&token=454bff31-efb0-478f-af7e-0342f10a08b0",
-      "content": "https://firebasestorage.googleapis.com/v0/b/tips-8fb99.appspot.com/o/uangpintk%2F5%20Cara%20Menghubungi%20Admin%20Aplikasi%20Uang%20Pintek.html?alt=media&token=83508149-1ed7-4a1a-9e41-c5a004a49c5f",
+      "content": "https://firebasestorage.googleapis.com/v0/b/tips-8fb99.appspot.com/o/uangpintk%2F5%20Pinjaman%20Online%20Harian.html?alt=media&token=77f88692-dcd2-4ee8-97c3-a95037b37928&_gl=1*1pcnri1*_ga*MTAwMzcyMjI1NS4xNjYxNDA5Njcz*_ga_CW55HF8NVT*MTY5NjgzNDM5OS4zMC4xLjE2OTY4MzUxNzIuMzUuMC4w",
       "video": ""
     },{
       "id": 6,
       "category": "Tips Pinjaman Online Uang Pintek",
-      "title": "Daftar Lender Pinjaman Online Dengan Tenor Panjang",
+      "title": "Pinjaman Online Syariah Cepat Cair",
       "image": "https://firebasestorage.googleapis.com/v0/b/tips-8fb99.appspot.com/o/uangpintk%2Fbannerpntk.png?alt=media&token=454bff31-efb0-478f-af7e-0342f10a08b0",
-      "content": "https://firebasestorage.googleapis.com/v0/b/tips-8fb99.appspot.com/o/uangpintk%2F6%20Daftar%20Lender%20Pinjaman%20Online%20Dengan%20Tenor%20Panjang.html?alt=media&token=143be8a0-771f-4958-bd18-925a1ca29349",
+      "content": "https://firebasestorage.googleapis.com/v0/b/tips-8fb99.appspot.com/o/uangpintk%2F6%20Pinjaman%20Online%20Syariah%20Cepat%20Cair.html?alt=media&token=7a8f087c-1518-49de-9f59-c35dfd65ad2c&_gl=1*3tz2iu*_ga*MTAwMzcyMjI1NS4xNjYxNDA5Njcz*_ga_CW55HF8NVT*MTY5NjgzNDM5OS4zMC4xLjE2OTY4MzUxOTIuMTUuMC4w",
       "video": ""
     },{
       "id": 7,
       "category": "Tips Pinjaman Online Uang Pintek",
-      "title": "Daftar Lender Pinjaman Online dengan Bunga Rendah",
+      "title": "Pinjaman Online Tenor 2 Bulan",
       "image": "https://firebasestorage.googleapis.com/v0/b/tips-8fb99.appspot.com/o/uangpintk%2Fbannerpntk.png?alt=media&token=454bff31-efb0-478f-af7e-0342f10a08b0",
-      "content": "https://firebasestorage.googleapis.com/v0/b/tips-8fb99.appspot.com/o/uangpintk%2F7%20Daftar%20Lender%20Pinjaman%20Online%20dengan%20Bunga%20Rendah.html?alt=media&token=1e32dd86-7ccd-49b5-ae36-b51beffb8be2",
+      "content": "https://firebasestorage.googleapis.com/v0/b/tips-8fb99.appspot.com/o/uangpintk%2F7%20Pinjaman%20Online%20Tenor%202%20Bulan.html?alt=media&token=7d75d17f-0484-4c3a-ac1c-5beb63a2c5dd&_gl=1*1nle2sl*_ga*MTAwMzcyMjI1NS4xNjYxNDA5Njcz*_ga_CW55HF8NVT*MTY5NjgzNDM5OS4zMC4xLjE2OTY4MzUyMTIuNTUuMC4w",
       "video": ""
     },{
       "id": 8,
       "category": "Tips Pinjaman Online Uang Pintek",
-      "title": "Tips Bayar Pinjaman Online Tepat Waktu",
+      "title": "Pinjaman Online Tenor 6 Bulan",
       "image": "https://firebasestorage.googleapis.com/v0/b/tips-8fb99.appspot.com/o/uangpintk%2Fbannerpntk.png?alt=media&token=454bff31-efb0-478f-af7e-0342f10a08b0",
-      "content": "https://firebasestorage.googleapis.com/v0/b/tips-8fb99.appspot.com/o/uangpintk%2F8%20Tips%20Bayar%20Pinjaman%20Online%20Tepat%20Waktu.html?alt=media&token=9cfc8aae-7b58-4b1d-b425-3b9e610a12e2",
+      "content": "https://firebasestorage.googleapis.com/v0/b/tips-8fb99.appspot.com/o/uangpintk%2F8%20Pinjaman%20Online%20Tenor%206%20Bulan.html?alt=media&token=646a8c65-91ae-4d43-87e1-fc0c93c3a357&_gl=1*5bnknq*_ga*MTAwMzcyMjI1NS4xNjYxNDA5Njcz*_ga_CW55HF8NVT*MTY5NjgzNDM5OS4zMC4xLjE2OTY4MzUyMzIuMzUuMC4w",
       "video": ""
     },{
       "id": 9,
       "category": "Tips Pinjaman Online Uang Pintek",
-      "title": "Mengenal Pinjaman Tanpa Bunga",
+      "title": "Pinjaman Online Tenor 7 Hari",
       "image": "https://firebasestorage.googleapis.com/v0/b/tips-8fb99.appspot.com/o/uangpintk%2Fbannerpntk.png?alt=media&token=454bff31-efb0-478f-af7e-0342f10a08b0",
-      "content": "https://firebasestorage.googleapis.com/v0/b/tips-8fb99.appspot.com/o/uangpintk%2F9%20Mengenal%20Pinjaman%20Tanpa%20Bunga.html?alt=media&token=d09d29d0-6dc7-4531-8008-5547d70da103",
+      "content": "https://firebasestorage.googleapis.com/v0/b/tips-8fb99.appspot.com/o/uangpintk%2F9%20Pinjaman%20Online%20Tenor%207%20Hari.html?alt=media&token=ed49e86a-eb02-4cfb-901e-2613cba8aa13&_gl=1*10elsmu*_ga*MTAwMzcyMjI1NS4xNjYxNDA5Njcz*_ga_CW55HF8NVT*MTY5NjgzNDM5OS4zMC4xLjE2OTY4MzUyNDkuMTguMC4w",
       "video": ""
     },{
       "id": 10,
       "category": "Tips Pinjaman Online Uang Pintek",
-      "title": "Resiko Gagal Bayar Pinjaman Online",
+      "title": "Pinjaman Tunai Aman",
       "image": "https://firebasestorage.googleapis.com/v0/b/tips-8fb99.appspot.com/o/uangpintk%2Fbannerpntk.png?alt=media&token=454bff31-efb0-478f-af7e-0342f10a08b0",
-      "content": "https://firebasestorage.googleapis.com/v0/b/tips-8fb99.appspot.com/o/uangpintk%2F10%20Resiko%20Gagal%20Bayar%20Pinjaman%20Online.html?alt=media&token=6901f2da-f2b9-456b-9cdb-0742aca8cdca",
+      "content": "https://firebasestorage.googleapis.com/v0/b/tips-8fb99.appspot.com/o/uangpintk%2F10%20Pinjaman%20Tunai%20Aman.html?alt=media&token=afa89239-bee7-444a-8ec9-d5bcb333c769&_gl=1*ox5a7*_ga*MTAwMzcyMjI1NS4xNjYxNDA5Njcz*_ga_CW55HF8NVT*MTY5NjgzNDM5OS4zMC4xLjE2OTY4MzUyNzIuNTYuMC4w",
       "video": ""
     },{
       "id": 11,
